# PotreeConverter

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  FUNDING.yml  LICENSE  Makefile  Potree.sln  README.md  entrypoint.sh  testcases.txt
Converter/: Converter.sln  Converter.vcxproj  Converter.vcxproj.filters
Converter/include/: Attributes.h  ChunkRefiner.h  ConcurrentWriter.h  DbgWriter.h  HierarchyBuilder.h  LaszipReader.h  Monitor.h  OctreeSerializer.h  PotreeConverter.h  Vector3.h  chunker_countsort.h  chunker_countsort_laszip.h  chunker_sparse.h  converter_utils.h  indexer.h  indexer_poissondisk.h  indexer_random.h  indexer_voxels.h  logger.h  prototyping.h  sampler_poisson.h  sampler_poisson_average.h  sampler_random.h  sampler_voxels.h  sampler_weighted.h  structures.h
Converter/libs/arguments/: Arguments.hpp
Converter/libs/brotli/: CMakeLists.txt
Converter/libs/json/: LICENSE
Converter/libs/laszip/: CMakeLists.txt  INSTRUCTIONS_FOR_POTREE.txt  laszip3.lib
Converter/libs/laszip/dll/: laszip_api_version.h
Converter/libs/laszip/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
Converter/libs/robinhood_map/: robin_hood.h
Converter/modules/LasLoader/: LasLoader.cpp  LasLoader.h
Converter/modules/tools/: potree_to_laz.h  sort_pointcloud.h
Converter/modules/unsuck/: TaskPool.hpp  cpu.h  unsuck.hpp  unsuck_platform_specific.cpp
Converter/src/: DbgWriter.cpp  LasLoader.cpp  LaszipReader.cpp  chunker.cpp  chunker_countsort.cpp  chunker_countsort_laszip.cpp  chunker_sparse.cpp  indexer.cpp  indexer_poissondisk.cpp  indexer_random.cpp  indexer_voxels.cpp  logger.cpp  main.cpp
LAStools/: Makefile
LAStools/LASlib/src/: Makefile
LAStools/LASzip/: CMakeLists.txt
LAStools/LASzip/src/: CMakeLists.txt  lasindex.cpp  lasinterval.cpp  laszip_dll.cpp
LAStools/src/: Makefile
PotreeConverter/: CMakeLists.txt  PotreeConverter.vcxproj  PotreeConverter.vcxproj.filters
PotreeConverter/include/: AABB.h  BINPointReader.hpp  BINPointWriter.hpp  BatchIndexer.h  BinPointReader.h  BoostBINPointReader.hpp  ChunkProcessor.h  Chunker.h  Chunker2.h  Chunker_Tree.h  CloudJS.hpp  ConversionInfos.h  ExtraBytes.hpp  FlatBufferReader.hpp  GridCell.h  GridIndex.h  Indexer_Bluenoise.h  Indexer_Centered.h  Indexer_Centered_countsort.h  Indexer_Centered_nochunks.h  LASLoader.hpp  LASPointReader.h  LASPointWriter.hpp  LASWriter.hpp  LRU.hpp  LocbPointReader.h  Metadata.h  Node.h  PTXPointReader.h  PlyPointReader.h  Point.h  PointAttributes.hpp  PointReader.h  PointWriter.hpp  Points.h  PotreeConverter.cpp  PotreeConverter.h  PotreeException.h  PotreeTiler.h  PotreeWriter.h  (+19 more)
PotreeConverter/lib/ThreadPool/: ThreadPool.h
PotreeConverter/lib/arguments/: arguments.hpp
PotreeConverter/lib/json/: readme.txt
PotreeConverter/modules/index_bluenoise/: Indexer.cpp  Indexer.h  PotreeWriter.cpp  PotreeWriter.h  Structures.cpp  Structures.h
PotreeConverter/resources/page_template/: lasmap_template.html  viewer_template.html  viewer_template_flip.html  viewer_template_old.html
PotreeConverter/resources/page_template/examples/: viewer_template.html
PotreeConverter/resources/page_template/examples/js/: viewer.js
PotreeConverter/resources/page_template/libs/potree/: potree.js  potree.js.map  sidebar.html
PotreeConverter/resources/page_template/libs/potree/resources/lang/en/: translation.json
PotreeConverter/resources/page_template/libs/potree/resources/lang/pl/: translation.json
PotreeConverter/resources/page_template/libs/potree/workers/: OctreeDecoderWorker.js
PotreeConverter/src/: BINPointReader.cpp  BINPointWriter.cpp  BinPointReader.cpp  BoostBINPointReader.cpp  ChunkIndexer.cpp  ChunkProcessor.cpp  Chunker.cpp  FlatBufferReader.cpp  GridCell.cpp  Indexer_Bluenoise.cpp  Indexer_Centered.cpp  Indexer_Centered_countsort.cpp  Indexer_Centered_nochunks.cpp  LASPointReader.cpp  LASPointWriter.cpp  LASWriter.cpp  LOCBPointReader.cpp  PTXPointReader.cpp  Point.cpp  PointAttributes.cpp  PotreeConverter.cpp  PotreeTiler.cpp  PotreeWriter.cpp  PotreeWriterDartThrowing.cpp  SparseGrid.cpp  TilingGrid.cpp  Vector3.cpp  main.cpp  stuff.cpp  test.cpp
cmake/: FindLASzip.cmake
docker/: Dockerfile  README.md  dockerfile  entrypoint.sh
docs/: changelog.md
resources/page_template/: viewer_template.html
resources/page_template/libs/potree/: potree.css  potree.js  potree.js.map  sidebar.html
resources/page_template/libs/potree/workers/: OctreeDecoderWorker.js
test/: README  test.js
test/resources/: 1.las  PD0003.las  ripple_ascii.ply  ripple_bin.ply
testing/: testing.mjs
tools/: 7zip.txt  playground.js  playground.mjs  template.html  testing.mjs  utils.mjs
tools/ChunksToLas/: main.mjs
xyzrgb2bin/: CMakeLists.txt  xyzrgb2bin.vcxproj
xyzrgb2bin/src/: main.cpp
